# SlideNote

./: .gitignore  CLAUDE_BACKEND.zh-CN.md  CONFIG.zh-CN.md  NOTICE  README.md  README.zh-CN.md  ROADMAP.zh-CN.md  install.ps1  pricing.template.json  pyproject.toml  run_gui.ps1
docs/: claude-backend.zh-CN.md  index.zh-CN.md  ir-and-source-map.zh-CN.md  pipeline.zh-CN.md  presets.zh-CN.md  providers-and-cost.zh-CN.md  quality-and-guard.zh-CN.md
gui/: README_GUI.md  README_GUI.zh-CN.md  app.py  studio_core.py
scripts/: generate_cost_report.py  smoke_first_run.py  smoke_textbook_index.py
slidenote/: __init__.py  agent_backend.py  agent_eval.py  api_retry.py  build_pipeline.py  cli.py  composite_figures.py  content_guard.py  costing.py  coverage.py  deck_brief.py  doctor.py  exporting.py  figure_grounding.py  figures.py  image_assets.py  image_ranking.py  ir.py  ir_context.py  ir_projection.py  ir_standard.py  llm.py  llm_cache.py  modality.py  models.py  notes.py  ocr.py  parser_adapters.py  pipeline.py  progress.py  rendering.py  sections.py  semantic_layout.py  source_map.py  study_pack.py  study_pack_runner.py  table_understanding.py  textbook.py  understanding.py  utils.py  (+1 more)
tests/: conftest.py  test_agent_backend.py  test_cli.py  test_content_guard.py  test_costing.py  test_coverage.py  test_deck_brief.py  test_exports.py  test_figure_grounding.py  test_figures.py  test_image_assets.py  test_ir.py  test_llm.py  test_modality.py  test_notes.py  test_ocr.py  test_parser_adapters.py  test_pipeline.py  test_sections.py  test_semantic_layout.py  test_source_map.py  (+6 more)
(+28 files in other folders)
